# django-admin-shellx

./: .gitignore  LICENSE  MANIFEST.in  README.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js  tox.ini  webpack.config.js
.github/workflows/: ci-cd.yml  release-drafter.yml
django_admin_shellx/: admin.py  apps.py  consumers.py  models.py  signals.py  urls.py  views.py
django_admin_shellx/migrations/: 0001_initial.py  0002_alter_terminalcommand_options_and_more.py  0003_terminalcommand_prompt.py  0004_alter_terminalcommand_command_and_more.py
django_admin_shellx/static/django_admin_shellx/css/: terminal.css
django_admin_shellx/static/django_admin_shellx/js/: terminal.js
django_admin_shellx/static/django_admin_shellx/output/: terminal.css  terminal.js
django_admin_shellx/templates/django_admin_shellx/: terminal.html  terminal_table.html
django_admin_shellx_custom_admin/: admin.py  apps.py
django_web_repl/: admin.py  apps.py  consumers.py  models.py  signals.py  urls.py  views.py
django_web_repl/migrations/: 0002_alter_terminalcommand_options_and_more.py  0003_terminalcommand_prompt.py  0004_alter_terminalcommand_command_and_more.py
django_web_repl/static/django_web_repl/css/: terminal.css
django_web_repl/static/django_web_repl/js/: terminal.js
django_web_repl/templates/django_web_repl/: terminal.html
django_web_repl_custom_admin/: admin.py  apps.py
django_web_shell/: apps.py  signals.py  urls.py
tests/: asgi.py  conftest.py  factories.py  settings.py  test_commands.py  test_views.py  test_websockets.py  urls.py
