[tool.poetry]
name = "django-web-repl"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <you@example.com>"]
license = "MIT"

# Remember to run `poetry update` instead of `poetry install` on the first go!
[tool.poetry.dependencies]
python = ">=3.9"
Django = ">=4.*"
channels = "^4.0.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
black = "^24.2.0"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"
django-coverage-plugin = "^3.1.0"
pylint = "^3.0.3"
ptpython = "^3.0.26"
channels = {extras = ["daphne"], version = "^4.0.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
